--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/place/Emory+University/@33.7971412,-84.3248149,17z/data=!3m1!4b1!4m6!3m5!1s0x88f506f7808a4f1d:0x58d57a6237dd9c55!8m2!3d33.7971368!4d-84.32224!16zL20vMGJxeHc?entry=ttu"
+              src="https://www.google.com/maps/place/Decatur,+GA+30030/@33.7720482,-84.3175336,14z/data=!3m1!4b1!4m6!3m5!1s0x88f5073c14fe20e9:0x3152e0dc7cd17800!8m2!3d33.7748275!4d-84.2963123!16zL20vMHJ2dHk?entry=ttu"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
