--- a/index.html
+++ b/index.html
@@ -955,12 +955,13 @@
 
         <section class="mapbox" data-mapbox>
           <figure>
-            <iframe
-              src="https://www.google.com/maps/place/Decatur,+GA+30030/@33.7720482,-84.3175336,14z/data=!3m1!4b1!4m6!3m5!1s0x88f5073c14fe20e9:0x3152e0dc7cd17800!8m2!3d33.7748275!4d-84.2963123!16zL20vMHJ2dHk?entry=ttu"
-              width="400" height="300" loading="lazy"></iframe>
+            <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3315.5877980189016!2d-84.32481492463457!3d33.79714123115798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f506f7808a4f1d%3A0x58d57a6237dd9c55!2sEmory%20University!5e0!3m2!1sen!2sus!4v1696529505066!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+
           </figure>
         </section>
-
+        
         <section class="contact-form">
 
           <h3 class="h3 form-title">Contact Form</h3>
