--- a/index.html
+++ b/index.html
@@ -675,76 +675,241 @@
       </article>
 
 
-
-
-
-
       <!--
-        - #Publications
+        - #PORTFOLIO
       -->
 
-      <article class="Publications" data-page="Publications">
+      <article class="portfolio" data-page="portfolio">
 
         <header>
           <h2 class="h2 article-title">Publications</h2>
         </header>
 
+        <section class="projects">
 
-        <section class="timeline">
+          <ul class="filter-list">
 
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
+            <li class="filter-item">
+              <button class="active" data-filter-btn>All</button>
+            </li>
 
-            <h3 class="h3">Selected Publications</h3>
+            <li class="filter-item">
+              <button data-filter-btn>Web design</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Applications</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Web development</button>
+            </li>
+
+          </ul>
+
+          <div class="filter-select-box">
+
+            <button class="filter-select" data-select>
+
+              <div class="select-value" data-selecct-value>Select category</div>
+
+              <div class="select-icon">
+                <ion-icon name="chevron-down"></ion-icon>
+              </div>
+
+            </button>
+
+            <ul class="select-list">
+
+              <li class="select-item">
+                <button data-select-item>All</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Web design</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Applications</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Web development</button>
+              </li>
+
+            </ul>
+
           </div>
 
-          <ol class="timeline-list">
+          <ul class="project-list">
 
-            <li class="timeline-item">
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
 
-              <h4 class="h4 timeline-item-title">NeurIPS 2023</h4>
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
 
-              <span>2023</span>
+                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                </figure>
 
-              <p class="timeline-text">
-                Zheng Zhang, Junxiang Wang, Liang Zhao Relational Curriculum Learning for Graph Neural Network. The Thirty-Seventh Annual Conference on Neural Information Processing Systems (NeurIPS 2023), accepted (acceptance rate: 26.1%), 2023.
-              </p>
+                <h3 class="project-title">Finance</h3>
 
+                <p class="project-category">Web development</p>
+
+              </a>
             </li>
 
-            <li class="timeline-item">
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
 
-              <h4 class="h4 timeline-item-title">ICDM 2022</h4>
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
 
-              <span>2022</span>
+                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                </figure>
 
-              <p class="timeline-text">
-                Zheng Zhang and Liang Zhao. Unsupervised Deep Subgraph Anomaly Detection. The IEEE International Conference on Data Mining (ICDM 2022), full paper, (Acceptance Rate: 9.77%), to appear, 2022.
-[Best Paper Award]
-              </p>
+                <h3 class="project-title">Orizon</h3>
 
+                <p class="project-category">Web development</p>
+
+              </a>
             </li>
 
-            <li class="timeline-item">
+            <li class="project-item  active" data-filter-item data-category="web design">
+              <a href="#">
 
-              <h4 class="h4 timeline-item-title">NeurIPS 2021</h4>
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
 
-              <span>2021</span>
+                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                </figure>
 
-              <p class="timeline-text">
-                Zheng Zhang and Liang Zhao. Representation Learning on Spatial Networks. The 35th Conference on Neural Information Processing Systems (NeurIPS 2021), (Acceptance Rate: 26%), accepted.
-              </p>
+                <h3 class="project-title">Fundo</h3>
 
+                <p class="project-category">Web design</p>
+
+              </a>
             </li>
 
-          </ol>
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Brawlhalla</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web design">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                </figure>
+
+                <h3 class="project-title">DSM.</h3>
+
+                <p class="project-category">Web design</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web design">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">MetaSpark</h3>
+
+                <p class="project-category">Web design</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Summary</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Task Manager</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Arrival</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+          </ul>
 
         </section>
 
       </article>
-
 
 
 
