--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
         - #BLOG
       -->
 
-      <article class="research" data-page="research">
+      <article class="blog" data-page="blog">
 
         <header>
           <h2 class="h2 article-title">Research</h2>
