--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
       <article class="portfolio" data-page="portfolio">
 
         <header>
-          <h2 class="h2 article-title">Publications</h2>
+          <h2 class="h2 article-title">Portfolio</h2>
         </header>
 
         <section class="projects">
@@ -923,7 +923,7 @@
       <article class="blog" data-page="blog">
 
         <header>
-          <h2 class="h2 article-title">Research</h2>
+          <h2 class="h2 article-title">Blog</h2>
         </header>
 
         <section class="blog-posts">
