--- a/index.html
+++ b/index.html
@@ -676,13 +676,13 @@
 
 
       <!--
-        - #PORTFOLIO
+        - #Publications
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="publications" data-page="publications">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Publications</h2>
         </header>
 
         <section class="projects">
@@ -920,10 +920,10 @@
         - #BLOG
       -->
 
-      <article class="blog" data-page="blog">
+      <article class="research" data-page="research">
 
         <header>
-          <h2 class="h2 article-title">Blog</h2>
+          <h2 class="h2 article-title">Research</h2>
         </header>
 
         <section class="blog-posts">
