--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
             <button class="navbar-link" data-nav-link>Research</button>
           </li>
 
+
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Photo</button>
+          </li>
+
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
           </li>
@@ -685,6 +690,73 @@
           <h2 class="h2 article-title">Publications</h2>
         </header>
 
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Selected Publications</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">NeurIPS 2023</h4>
+
+              <span>2023</span>
+
+              <p class="timeline-text">
+                Zheng Zhang, Junxiang Wang, Liang Zhao Relational Curriculum Learning for Graph Neural Network. The Thirty-Seventh Annual Conference on Neural Information Processing Systems (NeurIPS 2023), accepted (acceptance rate: 26.1%), 2023.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">ICDM 2022</h4>
+
+              <span>2022</span>
+
+              <p class="timeline-text">
+                Zheng Zhang and Liang Zhao. Unsupervised Deep Subgraph Anomaly Detection. The IEEE International Conference on Data Mining (ICDM 2022), full paper, (Acceptance Rate: 9.77%), to appear, 2022.
+[Best Paper Award]
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">NeurIPS 2021</h4>
+
+              <span>2021</span>
+
+              <p class="timeline-text">
+                Zheng Zhang and Liang Zhao. Representation Learning on Spatial Networks. The 35th Conference on Neural Information Processing Systems (NeurIPS 2021), (Acceptance Rate: 26%), accepted.
+              </p>
+
+            </li>
+
+          </ol>
+
+        </section>
+
+      </article>
+
+
+
+      <!--
+        - #Research
+      -->
+
+      <article class="research" data-page="research">
+
+        <header>
+          <h2 class="h2 article-title">Research</h2>
+        </header>
+
         <section class="projects">
 
           <ul class="filter-list">
@@ -920,10 +992,10 @@
         - #BLOG
       -->
 
-      <article class="research" data-page="research">
+      <article class="photo" data-page="photo">
 
         <header>
-          <h2 class="h2 article-title">Research</h2>
+          <h2 class="h2 article-title">Photo</h2>
         </header>
 
         <section class="blog-posts">
